--- a/style/index.css
+++ b/style/index.css
@@ -1,9 +1,13 @@
 .collection {
     background: #EEE4DB;
-    background-image: url(/img/monster.png);
-    background-repeat: no-repeat;
-    background-position: right top -89px;
+    position: relative;
     margin-bottom: 90px;
+}
+
+.collection__img {
+    position: absolute;
+    top: -87px;
+    right: 100px;
 }
 
 .collection__wrapper {
@@ -12,7 +16,7 @@
 
 .collection__switch {
     margin-top: 17px;
-    margin-left: 28px;
+    margin-left: 31px;
     margin-right: 44px;
 }
 
@@ -27,7 +31,7 @@
 .collection__switch-list-item {
     width: 31px;
     height: 3px;
-    margin-bottom: 11px;
+    margin-bottom: 10px;
 }
 
 .collection__switch-list-item-button {
@@ -43,7 +47,7 @@
 }
 
 .collection__text {
-    margin-top: 89px;
+    margin-top: 91px;
     margin-bottom: 89px;
 }
 
@@ -55,7 +59,7 @@
     color: #1E0606;
     width: 307px;
     margin: 0;
-    margin-bottom: 20px;
+    margin-bottom: 18px;
 }
 
 .collection__text-subtitle {
@@ -100,6 +104,14 @@
     color: #FFFFFF;
 }
 
+.category {
+    margin-bottom: 90px;
+}
+
+.category__products {
+    margin-bottom: 33px;
+}
+
 .category__products-title {
     font-family: 'Montserrat';
     font-weight: 700;
@@ -107,5 +119,270 @@
     line-height: 46px;
     text-transform: uppercase;
     color: #1E0606;
+    margin-bottom: 30px;
+}
+
+.category__products-list {
+    display: flex;
+}
+
+.category__products-list-item {
+    width: 280px;
+    height: 270px;
+    position: relative;
+    margin-right: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.category__products-list-item:nth-child(4) {
+    margin-right: 0;
+}
+
+.green {
+    background: #DBE4DB;
+}
+
+.brown {
+    background: #EADDD3;
+}
+
+.beige {
+    background: #F8F2DA;
+}
+
+.blue {
+    background: #D5D4E1;
+}
+
+.category__products-list-item-text {
+    position: absolute;
+    font-family: 'Montserrat';
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 32px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    top: 103px;
+}
+
+.text-apparel {
+    left: 75px;
+    width: 129px;
+    text-align: center;
+}
+
+.text-holiday {
+    left: 62px;
+    width: 155px;
+    text-align: center;
+}
+
+.text-toys {
+    top: 119px;
+    left: 104px;
+}
+
+.text-accessories {
+    top: 119px;
+    left: 44px;
+}
+
+.category__switch {
+    display: flex;
+}
+
+.category__switch-left-arrow, 
+.category__switch-right-arrow {
+    width: 37px;
+    height: 37px;
+    background: rgba(112, 187, 220, 0.2);
+    border: 0;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.category__switch-left-arrow {
+    margin-right: 6px;
+}
+
+.category__switch-right-arrow {
+    margin-right: 20px;
+}
+
+.category__switch-subtitle {
+    width: 580px;
+    font-family: 'Open Sans';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    color: #1E0606;
+}
+
+.delivery {
+    display: flex;
+    margin-bottom: 90px;
+}
+
+.delivery__img {
+    margin-right: 120px;
+}
+
+.delivery__text-title {
+    font-family: 'Montserrat';
+    font-weight: 700;
+    font-size: 38px;
+    line-height: 46px;
+    text-transform: uppercase;
+    color: #1E0606;
+    margin-bottom: 6px;
+    margin-top: 30px;
+}
+
+.delivery__text-subtitle {
+    font-family: 'Crimson Text';
+    font-style: italic;
+    font-weight: 400;
+    font-size: 26px;
+    line-height: 34px;
+    color: #1E0606;
+    margin-bottom: 22px;
+}
+
+.delivery__text-subtitle-margin {
+    margin-bottom: 30px;
+}
+
+.delivery__weight {
+    font-weight: 700;
+    padding-left: 60px;
+    padding-top: 11px;
+}
+
+.background-blue {
+    width: 266px;
+    height: 44px;
+    background: rgba(112, 187, 220, 0.2);
+    margin-bottom: 11px;
+    margin-left: -60px;
+}
+
+.delivery__text-description {
+    width: 470px;
+    font-family: 'Open Sans';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    color: #1E0606;
+    margin-bottom: 15px;
+}
+
+.delivery__margin {
+    margin-bottom: 35px;
+}
+
+.delivery__text-link {
+    padding: 9px 22px;
+    background: #000000;
+    font-family: 'Open Sans';
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 22px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    cursor: pointer;
+}
+
+.awards {
+    margin-bottom: 90px;
+}
+
+.awards__list {
+    display: flex;
+    align-items: flex-end;
+}
+
+.awards__list-item {
+    margin-right: auto;
+}
+
+.awards__list-item:nth-child(4) {
+    margin: 0;
+}
+
+.wrapper {
+    display: flex;
+    margin-bottom: 50px;
+}
+
+.design__wrapper {
+    margin-left: 30px;
+}
+
+.design__title {
+    font-family: 'Montserrat';
+    font-weight: 700;
+    font-size: 38px;
+    line-height: 46px;
+    text-transform: uppercase;
+    color: #1E0606;
+    margin-bottom: 10px;
+}
+
+.design__subtitle {
+    font-family: 'Crimson Text';
+    font-style: italic;
+    font-weight: 400;
+    font-size: 26px;
+    line-height: 34px;
+    color: #1E0606;
+    margin-bottom: 10px;
+}
+
+.design__description {
+    font-family: 'Open Sans';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    color: #1E0606;
+    margin-bottom: 29px;
+    width: 483px;
+}
+
+.design__link {
+    padding: 9px 22px;
+    background: #000000;
+    font-family: 'Open Sans';
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 22px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    cursor: pointer;
+}
+
+.contacts__wrapper {
+    margin-left: 30px;
+}
+
+.contacts__title {
+    font-family: 'Montserrat';
+    font-weight: 700;
+    font-size: 38px;
+    line-height: 46px;
+    text-transform: uppercase;
+    color: #1E0606;
     margin-bottom: 20px;
+}
+
+.contacts__subtitle {
+    font-family: 'Open Sans';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    color: #1E0606;
+    margin-bottom: 30px;
+    width: 483px;
 }
