--- a/style/common.css
+++ b/style/common.css
@@ -254,7 +254,6 @@ img {
 
 .footer__bottom-rating-area {
 	overflow: hidden;
-	width: 100px;
     height: 17px;
     margin-left: 28px;
 }
@@ -265,8 +264,9 @@ img {
 
 .footer__bottom-rating-area:not(:checked) > label {
 	float: right;
-	width: 17px;
-    margin-right: 3px;
+	width: 14px;
+    height: 21.6px;
+    margin-right: 6px;
 	cursor: pointer;
 }
 
