--- a/style/index.css
+++ b/style/index.css
@@ -454,4 +454,44 @@
 
 .modal {
     display: none;
+    position: absolute;
+    top: 113px;
+    left: 28%;
+}
+
+.open {
+    display: flex;
+    flex-direction: row;
+}
+
+.modal__close {
+    background-image: url(/img/close.png);
+    background-repeat: no-repeat;
+    width: 15px;
+    height: 15px;
+    margin-left: 10px;
+    z-index: 20;
+}
+
+.modal__close:hover {
+    opacity: 0.7;
+}
+
+.modal__close:hover {
+    opacity: 0.4;
+}
+
+.modal__overlay {
+    position: fixed;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 1;
+    background: rgba(125, 151, 218, 0.8);
+}
+
+.contact__main {
+    z-index: 20;
 }
